adedd test class1